--- a/AIMAE/pom.xml
+++ b/AIMAE/pom.xml
@@ -17,6 +17,13 @@
             <version>1.18.26</version>
             <scope>provided</scope>
         </dependency>
+        
+        <!-- Thymeleaf -->
+        <dependency>
+		    <groupId>org.thymeleaf</groupId>
+		    <artifactId>thymeleaf</artifactId>
+		    <version>3.0.15.RELEASE</version>
+		</dependency>
 
         <!-- Servlet API -->
         <dependency>
