--- a/AIMAE/pom.xml
+++ b/AIMAE/pom.xml
@@ -46,6 +46,13 @@
 		    <artifactId>mybatis</artifactId>
 		    <version>3.5.5</version>
 		</dependency>
+		
+		<!-- jstl -->
+		<dependency>
+	        <groupId>javax.servlet</groupId>
+	        <artifactId>jstl</artifactId>
+	        <version>1.2</version>
+    	</dependency>
         
     </dependencies>
     
