물건기능구현, 수정, 삭제, 등록, 카테고리 목록 조회

--- a/AIMAE/src/main/webapp/WEB-INF/web.xml
+++ b/AIMAE/src/main/webapp/WEB-INF/web.xml
@@ -2,9 +2,10 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
   <display-name>AIMAE</display-name>
   <welcome-file-list>
+    <welcome-file>ProductList</welcome-file>
+    <welcome-file>index.jsp</welcome-file>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
     <welcome-file>default.html</welcome-file>
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
@@ -69,4 +70,85 @@
     <servlet-name>AimaeSelectAllService</servlet-name>
     <url-pattern>/AimaeSelectAllService</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>ProductListService</display-name>
+    <servlet-name>ProductListService</servlet-name>
+    <servlet-class>com.aimae.controller.ProductListService</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ProductListService</servlet-name>
+    <url-pattern>/ProductList</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>ProductDeleteService</display-name>
+    <servlet-name>ProductDeleteService</servlet-name>
+    <servlet-class>com.aimae.controller.ProductDeleteService</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ProductDeleteService</servlet-name>
+    <url-pattern>/ProductDelete</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>ProductUpdateService</display-name>
+    <servlet-name>ProductUpdateService</servlet-name>
+    <servlet-class>com.aimae.controller.ProductUpdateService</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ProductUpdateService</servlet-name>
+    <url-pattern>/ProductUpdateService</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>ProductRegistService</display-name>
+    <servlet-name>ProductRegistService</servlet-name>
+    <servlet-class>com.aimae.controller.ProductRegistService</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ProductRegistService</servlet-name>
+    <url-pattern>/ProductRegist</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>ProductDetailService</display-name>
+    <servlet-name>ProductDetailService</servlet-name>
+    <servlet-class>com.aimae.controller.ProductDetailService</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ProductDetailService</servlet-name>
+    <url-pattern>/ProductDetail</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>FruitProductListService</display-name>
+    <servlet-name>FruitProductListService</servlet-name>
+    <servlet-class>com.aimae.controller.FruitProductListService</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>FruitProductListService</servlet-name>
+    <url-pattern>/FruitProductList</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>VegetableProductListService</display-name>
+    <servlet-name>VegetableProductListService</servlet-name>
+    <servlet-class>com.aimae.controller.VegetableProductListService</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>VegetableProductListService</servlet-name>
+    <url-pattern>/VegetableProductList</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>ElectronicProductListService</display-name>
+    <servlet-name>ElectronicProductListService</servlet-name>
+    <servlet-class>com.aimae.controller.ElectronicProductListService</servlet-class>
+  </servlet>
+    <servlet-mapping>
+    <servlet-name>ElectronicProductListService</servlet-name>
+    <url-pattern>/ElectronicProductList</url-pattern>
+  </servlet-mapping>
+
 </web-app>
