--- a/AIMAE/pom.xml
+++ b/AIMAE/pom.xml
@@ -9,6 +9,13 @@
     <packaging>war</packaging>
 
     <dependencies>
+    
+	    <dependency>
+	    	<groupId>com.google.code.gson</groupId>
+	    	<artifactId>gson</artifactId>
+	    	<version>2.8.6</version>
+		</dependency>
+    
     	<!-- https://mvnrepository.com/artifact/javax.mail/mail -->
 		<dependency>
 		    <groupId>javax.mail</groupId>
