--- a/AIMAE/pom.xml
+++ b/AIMAE/pom.xml
@@ -73,6 +73,13 @@
 	        <artifactId>jstl</artifactId>
 	        <version>1.2</version>
     	</dependency>
+    	
+    	<!-- BCrypt -->
+    	<dependency>
+		    <groupId>org.mindrot</groupId>
+		    <artifactId>jbcrypt</artifactId>
+		    <version>0.4</version>
+		</dependency>
         
     </dependencies>
     
